<resources>
    <string name="app_name">Peyvand</string>
    <string name="profile">Profile</string>
    <string name="connect">Connect</string>
    <string name="contacts">Contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_title">Scan Code</string>
    <string name="connect_description">Scan this code to share your contact information with your friends. Or Scan your friends QRCode with scan button. </string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="intro_title_1">QR Code Connect</string>
    <string name="intro_content_1">Effortlessly share your contact information with a simple QR code scan. Instantly connect and save profiles to your phone’s contacts, complete with pictures and bios.</string>

    <string name="intro_title_2">Connect with Ease</string>
    <string name="intro_content_2">Simplify the way you connect with people. Use QR codes to quickly exchange contact details, including names, phone numbers, emails, and profile pictures. Perfect for business or social gatherings.</string>

    <string name="intro_title_3">Quick Contacts</string>
    <string name="intro_content_3">Adding new contacts has never been easier. Scan QR codes to instantly save detailed contact information, ensuring you never lose a connection.</string>

    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="tel_input">Phone Number</string>
    <string name="tel_hint">Example : 09012345678</string>
    <string name="bio_input">Enter Biography</string>
    <string name="invalid_name">Name is invalid.</string>
    <string name="invalid_tel">Phone number is invalid.</string>
    <string name="invalid_bio">Biography is invalid.</string>
    <string name="use_camera">Use Camera</string>
    <string name="pick_image">Pick from Gallery</string>
    <string name="unselect_image">Unselect Image</string>
    <string name="tel_title">Phone Number</string>
    <string name="bio_title">Bio</string>
    <string name="edit_name_title">Name</string>
    <string name="edit_bio_title">About</string>
    <string name="edit_tel_title">Phone</string>
    <string name="edit_name_description">This is your name that displayed to your contacts.</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_bio">Enter your information</string>
    <string name="enter_tel">Enter your phone number</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_content">Do you want to delete contact ?</string>
    <string name="delete_dialog_positive">Yes</string>
    <string name="delete_dialog_negative">No</string>
    <string name="delete_dialog_neutral">Cancel</string>
    <string name="invalid_qr">Qr code is invalid</string>
    <string name="scan_qr_code">Scan the code</string>
    <string name="permission_dialog_title">Permission denied</string>
    <string name="permission_dialog_text_camera">If you want to use camera to set a profile picture, please grant permission from app settings.</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">Ok</string>

    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_content">We require access to your phone number, telephone details, and an image (also your name and biography, although these may be considered less critical). All information, except for the image, is stored locally in the phone\'s cache. This ensures that your personal data, such as your phone number and other details, remain accessible for quicker retrieval without requiring external storage or network access. However, the image is handled separately and may be stored differently to optimize app performance and user experience.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_privacy">If you want to use the app, you should accept privacy policy.</string>
    <string name="save_contact">Save in device</string>
    <string name="copied_to_clipboard">Copied to clipboard !</string>
    <string name="qrcode_click_info">Click to share link or save qr code !</string>
    <string name="copy">Copy</string>
    <string name="save_qr_code">Save QrCode</string>
    <string name="save_qr_code_failed">Failed to save Qr Code !</string>
    <string name="saved">Saved !</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="twitter">Twitter</string>
    <string name="social_media">Social Media\n</string>
    <string name="invalid_social_media">Invalid social meddia username!</string>
    <string name="whatsapp_not_installed">WhatsApp is not installed!</string>
    <string name="telegra_not_installed">Telegram is not installed!</string>
</resources>