<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/cameraItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.MenuItem"
        android:text="@string/use_camera"
        android:drawableEnd="@drawable/camera_24_icon"/>
    
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/galleryItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.MenuItem"
        android:text="@string/pick_image"
        android:drawableEnd="@drawable/pick_image_icon"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/div2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/unselectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.MenuItem"
        android:text="@string/unselect_image"
        android:drawableEnd="@drawable/baseline_delete_24"/>

</LinearLayout>