<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.TelFragment">

    <TextView
        android:id="@+id/staticTitle"
        style="@style/Text.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel_title"
        app:layout_constraintBottom_toTopOf="@id/telContainer"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontalDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@color/white"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staticTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_input"
            android:inputType="phone"
            android:maxLength="11" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_hint"
        app:layout_constraintLeft_toLeftOf="@id/telContainer"
        app:layout_constraintTop_toBottomOf="@id/telContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>