<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editBioContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="16dp"
    app:layout_constraintTop_toBottomOf="parent">

    <TextView
        android:id="@+id/staticEditBioTitle"
        style="@style/Text.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/enter_bio"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editBioInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/bio_input"
        android:lines="6"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/saveBioButton"
        app:layout_constraintTop_toBottomOf="@id/staticEditBioTitle" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/error_red"
        app:layout_constraintLeft_toLeftOf="@id/editBioInput"
        app:layout_constraintTop_toBottomOf="@id/editBioInput" />

    <TextView
        android:id="@+id/saveBioButton"
        style="@style/Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/cancelBioButton"
        style="@style/Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/saveBioButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
