<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/staticTitle"
                style="@style/Text.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp">


                <androidx.cardview.widget.CardView
                    android:id="@+id/imageContainer"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    app:cardCornerRadius="64dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/picture_placeholder"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:cardCornerRadius="64dp"
                    app:layout_constraintBottom_toBottomOf="@id/imageContainer"
                    app:layout_constraintRight_toRightOf="@id/imageContainer">

                    <ImageView
                        android:id="@+id/smallImageIcon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary"
                        android:padding="8dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/camera_white_icon" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="48dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/telegramButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/button_telegram_outlined"
                    android:clickable="true"
                    android:drawableEnd="@drawable/baseline_add_24"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/telegram"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    app:drawableTint="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/instagramButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/instagramButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/button_instagram_outlined"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/instagram"
                    android:textColor="@color/instagram"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/baseline_add_24"
                    app:drawableTint="@color/instagram"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/telegramButton"
                    app:layout_constraintRight_toLeftOf="@id/xButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/xButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/x"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/button_x_outlined"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/x"
                    app:drawableEndCompat="@drawable/baseline_add_24"
                    app:drawableTint="@color/x"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/instagramButton"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/imageContainer">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/staticNameIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/account_icon"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/staticNameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/edit_name_title"
                        app:layout_constraintLeft_toRightOf="@id/staticNameIcon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/nameText"
                        style="@style/Text.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="@id/staticNameTitle"
                        app:layout_constraintTop_toBottomOf="@id/staticNameTitle" />

                    <ImageView
                        android:id="@+id/StaticNameEditIcon"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/edit_icon"
                        app:layout_constraintBottom_toTopOf="@id/nameDescriptionStatic"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/nameDescriptionStatic"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="start"
                        android:text="@string/edit_name_description"
                        app:layout_constraintLeft_toLeftOf="@id/staticNameTitle"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/nameText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bioContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/staticBioIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/baseline_info_outline_24"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/staticBioTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/edit_bio_title"
                        app:layout_constraintLeft_toRightOf="@id/staticBioIcon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/bioText"
                        style="@style/Text.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="@id/staticBioTitle"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/staticBioTitle" />

                    <ImageView
                        android:id="@+id/StaticBioEditIcon"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/edit_icon"
                        app:layout_constraintBottom_toTopOf="@id/bioText"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/telContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/staticTelIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/call_icon"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/staticTelTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/edit_tel_title"
                        app:layout_constraintLeft_toRightOf="@id/staticTelIcon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/telText"
                        style="@style/Text.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="@id/staticTelTitle"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/staticTelTitle" />

                    <ImageView
                        android:id="@+id/StaticTelEditIcon"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/edit_icon"
                        app:layout_constraintBottom_toTopOf="@id/telText"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>